更新jwt令牌逻辑